<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="115dp"
                        android:layout_marginTop="75dp"
                        app:srcCompat="@drawable/blue_icon" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/round_border"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/inputusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/round_border"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:padding="10dp" />


                    <EditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/round_border"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp" />

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/round_border"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:background="@drawable/round_bg"
                        android:text="@string/signup"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="130dp"
                        android:text="have an account?" />

                    <TextView
                        android:id="@+id/sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sign in"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>