<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="50dp"
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                app:srcCompat="@drawable/blue_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnsignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/round_bg"
                android:text="@string/signin"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="474dp"
                android:layout_height="match_parent"
                android:layout_marginTop="125dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="don't have an account?"
                    android:layout_marginLeft="100dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/signup"
                    android:text="Sign up"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>